Bug 153321 - Notebook Bar (MUFFIN) separator color inconsistent in dark mode
Summary: Notebook Bar (MUFFIN) separator color inconsistent in dark mode
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
Depends on:
Blocks: Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-02-02 11:08 UTC by Faisal
Modified: 2025-12-27 16:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot showing color inconsistency (84.19 KB, image/png)
2023-02-02 11:09 UTC, Faisal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal 2023-02-02 11:08:40 UTC
Description:
The color used for separators in different interfaces in LO is inconsistent in dark mode. 

Steps to Reproduce:
1. Open any application in the LO suite in dark mode.

Actual Results:
Standard and compact toolbar uses #626262 for separator, while other interface modes use #FFFFFF.

Expected Results:
All interface modes should use #626262 for separator color. This is because #FFF is too strong and appears brighter than many of the icons, since the icons are anti-aliased, and the separator (being a straight line) is not.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.4.2 (x64) / LibreOffice Community
Build ID: 85569322deea74ec9134968a29af2df5663baa21
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

(experimental features enabled)
Comment 1 Faisal 2023-02-02 11:09:05 UTC
Created attachment 185062 [details]
screenshot showing color inconsistency
Comment 2 stragu 2023-02-02 12:40:46 UTC
Reproduced with:

Version: 7.5.0.3 (x86) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 3 V Stuart Foote 2023-02-02 23:36:53 UTC
Those are all Notebook Bar (MUFFIN) constructs. Personally I have no issue with the brighter #FFFFFF as it offers higher contrast responding to a Windows Dark mode App theme. It also provides good contrast to the NB "Tab" rendering.

The standard Toolbar fg/bg toggle is fine as it is as well.

There is no requirement that the UIs match in this context as folks otherwise choose to use one of the MUFFIN .UI constructs or our Standard Toolbar/Dialog/SB. 

Consistency of the Light/Dark fg/bg toggle is a non-issue.

IMHO => WF
Comment 4 stragu 2023-02-03 08:38:07 UTC
I misread the report and thought the request was to make the default toolbar use the brighter colour for separators, which I think makes more sense.

Regarding consistency: the distinction between standard vs MUFFIN is disappearing and mainly relevant to developers. For users, it is not particularly relevant and the main visible distinction is the UI dialog's separation between the top two (standard and tabbed) and the rest below. That might be why the inconsistency can be more surprising to them.

I think the standard toolbar could benefit from more visible separators... So maybe a solution is to use a consistent in-between colour for all?
Comment 5 Heiko Tietze 2023-02-03 10:42:36 UTC
And I super dislike the hard contrast between full black and full white (it looks like high contrast mode; the Microsoft designers put surely a lot of effort into a good set of colors). We aim to follow the system default and should do it as well here. My take: BUG
Comment 6 Faisal 2023-02-04 13:37:05 UTC
To add to the discussion, this is why I prefer gray instead of white for separators:

1. From a usability POV, having a white line visually overshadows the icons. A white line makes it more difficult for users to find the icon they need to click on. In a toolbar, icons should have the highest visibility, not a non-clickable separator that the user cannot interact with. This is especially a problem when the Colibre icon theme relies on outlines.

2. Users who need high contrast can use Windows's high contrast mode. There is no low contrast mode for users who prefer a cleaner UI.
Comment 7 Caolán McNamara 2023-02-06 20:30:06 UTC
The NotebookBar is using FixedLines and that is drawing with DecorationView::DrawSeparator which uses Settings::GetShadowColor() + Settings::GetLightColor() while the Toolbar is using ToolBox::ImplDrawSeparator which uses Settings::GetSeparatorColor()
Comment 8 Caolán McNamara 2023-02-06 20:35:35 UTC
Lets try using the SeparatorColor in both cases: https://gerrit.libreoffice.org/c/core/+/146596
Comment 9 Commit Notification 2023-02-07 09:35:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/545ddfbaa98cfeaa35c95d7db7b16cd241cedc89

tdf#153321 use SeparatorColor for FixedLine

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2023-02-07 10:08:40 UTC
done in trunk, backport to 7-5 in gerrit
Comment 11 Heiko Tietze 2023-02-07 10:32:35 UTC
Much better, at least seen on macOS. Thanks a lot, Caolan!
Comment 12 Commit Notification 2023-02-07 10:37:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/93ad6bc4dabfb62a52b413dbabebb0e302c36023

tdf#153321 use SeparatorColor for FixedLine

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 V Stuart Foote 2023-02-08 14:30:46 UTC
attachment 185221 [details] shows the separator rendering as resolved on left, previous on right.
Comment 14 catch 2025-12-25 22:21:13 UTC Comment hidden (spam)