tdf#153321 use SeparatorColor for FixedLine

so the separators as seen in NotebookBar, etc are drawn the same as the
separators seen in the normal toolbar

Change-Id: I22f4f5e5506e325f78951011f0574653ff5758e0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146530
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>